Add some social sharing buttons.

--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -1,10 +1,14 @@
 <div class="page-header">
-  <h1>{{ page.title }} <small>Supporting tagline</small></h1>
+  <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
+
+{% include custom/addthis.html %}
 
 <div class="row">
   <div class="span8">
     {{ content }}
+    <hr>
+    {% include custom/addthis.html %}
     <hr>
     <div class="pagination">
       <ul>
