--- a/_includes/themes/twitter/page.html
+++ b/_includes/themes/twitter/page.html
@@ -2,6 +2,8 @@
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
 
+{% include custom/addthis.html %}
+
 <div class="row">
   <div class="span12">
     {{ content }}
